Fix stale stream state when QUIC streams can’t be re‑activated; add invariant checks (#63)
- Fixed a server-side stale stream state bug where picoquic_mark_active_stream failures left streams stuck in target_fin_pending/close_after_flush, which can cause a real connection stall (not just a warning).
- Added deterministic unit tests for server mark‑active failures and client FIN/mark‑active failures to ensure streams are removed on those error paths.
- Hardened client handling of picoquic_mark_active_stream failures by aborting/removing the stream and signaling TCP shutdown.
- Centralized invariant reporting into slipstream-core::invariants with a global 1/s throttle; client/server now emit error‑level invariant violations and panic only in tests.

--- a/crates/slipstream-server/Cargo.toml
+++ b/crates/slipstream-server/Cargo.toml
@@ -25,3 +25,6 @@ default = []
 openssl-vendored = ["slipstream-ffi/openssl-vendored", "openssl/vendored"]
 openssl-static = ["slipstream-ffi/openssl-static", "openssl/vendored"]
 picoquic-minimal-build = ["slipstream-ffi/picoquic-minimal-build"]
+
+[dev-dependencies]
+slipstream-core = { path = "../slipstream-core", features = ["invariant-panic", "test-support"] }
