--- a/crates/slipstream-client/Cargo.toml
+++ b/crates/slipstream-client/Cargo.toml
@@ -24,3 +24,6 @@ default = []
 openssl-vendored = ["openssl/vendored", "slipstream-ffi/openssl-vendored"]
 openssl-static = ["slipstream-ffi/openssl-static"]
 picoquic-minimal-build = ["slipstream-ffi/picoquic-minimal-build"]
+
+[dev-dependencies]
+slipstream-core = { path = "../slipstream-core", features = ["invariant-panic", "test-support"] }
